--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/websnarf/bstrlib
 [submodule "libs/toolbox"]
 	path = libs/toolbox
-	url = https://github.com/jakgra/toolbox
+	url = github.com:jakgra/toolbox
